# fed_learn_ipmsm

motors/: pyproject.toml
motors/code/: __init__.py  client.py  client_app.py  server.py  task.py
motors/src/: __init__.py  client.py  server.py  task.py
