[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fed_learn_ipmsm"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "flwr >= 1.25.0",
    "pandas",
    "scikit_learn",
    "torch >= 2.8.0",
]

[tool.setuptools]
py-modules = []